<resources>
    <string name="app_name">My Profile miay</string>
    <string name="_name">WELCOME TO MY PROFILE</string>
    <string name="hello_everyone">Hello Everyone</string>
    <string name="_textbaru">Hello Everyone!!</string>
    <string name="let_s_go">Let\'s go</string>
    <string name="my_biodata">My Biodata</string>
    <string name="_isimie">Hello all Before that, my name is Ummi Kolbia, I come from a village, namely Lubuk Ngin village, Palembang province, South Sumatra. I am 19 years old my hobbies are swimming, cooking and traveling. ohh yeah I\'m a student at the IDN campus in Jonggol, West Java. emm that\'s all and thank you</string>
    <string name="nama">Nama</string>
    <string name="name">Name</string>
    <string name="_isitext">Hello..... my name is Ummi kolbia, just call me Ummi. I am 19 years old now I am a student at the IDN Campus Jonggol, West Java. I am one of the scholarship recipients from the IDN Campus. I am a student or student, I come from the village of Lubuk Ngin, Palembang, South Sumatra. oh yeah my city is famous for pempek palembang, surely i already know. my hobbies are swimming, cooking and traveling. by the way, I like chocolate. maybe a little introduce thank you</string>
    <string name="assalamualaikum_wr_wb">Assalamualaikum wr.wb</string>
    <string name="wassalamualaikum_wr_wb">Wassalamualaikum wr.wb</string>
    <string name="see_more">See More</string>
    <string name="detail">Saya adalah salah satu mahasiswi idn yang mendapat beasiswa maka dari tujuanku memanfaatkan kesempatan yang diberi sebaik mungkin</string>
    <string name="isi_prestasi">- LOMBA KADARKUM (2019) - QASIDAH TERBAIK REMAJA (2016) -pensi(2017)</string>
    <string name="isi_about">I am an overseas student, the name of my campus is IDN campus</string>
    <string name="_prestasi">- Juara 1 KADARKUM (2018) - Qasidah terbaik remaja (2015) - Pensi (2016)</string>
    <string name="contact_details">contact details</string>
    <string name="_isikontak">WA : (082363316959) Ponsel: (08537532807) Email : miikolbia@gmail.com Jl. Lintas sumatera dusun 1 lubuk ngin, kec. Selangit, kab. Musi rawas Sumatera Selatan</string>
    <string name="educational_background">educational background</string>
    <string name="kolbia">2006-2007 TK AL-HIKAMAH RIWAYAT PENDIDIKAN Curriculum vitae 2007-2012 SD N 1 LUBUK NGIN 2013-2016 SMP N SELANGIT 2016-2019 SMA N SELANGIT</string>
    <string name="isi_organisasi">SMA N Selangit - Anggota Osis - Anggota Rohis - Anggota, Komunitas Debat - Anggota, Pramuka - Anggota, Klub Tari</string>
    <string name="isi_pendidikan">2006-2007 TK AL-HIKAMAH Curriculum vitae 2007-2012 SD N 1 LUBUK NGIN 2013-2016 SMP N SELANGIT 2016-2019 SMA N SELANGIT</string>
    <string name="_isimotto">Skip your dark color later you will find many colors</string>
</resources>