<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/walppaper"
    tools:context=".MainActivity2">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/tv_profilemi"
        android:layout_width="@dimen/_150dp"
        android:layout_height="@dimen/_150dp"
        android:layout_marginStart="@dimen/_125dp"
        android:layout_marginTop="@dimen/_20sp"
        android:src="@drawable/mifoto" />

    <Button
        android:layout_width="@dimen/_150dp"
        android:layout_height="@dimen/_5dp"
        android:background="@android:color/white"
        android:layout_marginTop="@dimen/_20sp"/>

    <Button
        android:layout_width="@dimen/_150dp"
        android:layout_height="@dimen/_5dp"
        android:background="@android:color/white"
        android:layout_marginStart="@dimen/_260dp"
        android:layout_below="@+id/tv_profilemi" />
    <TextView
        android:id="@+id/tv_biodate"
        style="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50dp"
        android:layout_below="@id/tv_profilemi"
        android:fontFamily="@font/jai"
        android:gravity="center"
        android:text="UMMI KOLBIA"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_30dp" />

    <Button
        android:id="@+id/biodata1"
        android:layout_width="@dimen/_150dp"
        android:layout_height="@dimen/_30dp"
        android:layout_below="@+id/tv_biodate"
        android:layout_marginTop="@dimen/_30dp"
        android:background="@android:color/black"
        android:text="about me"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/isi_aboutme"
        android:layout_width="@dimen/_150dp"
        android:layout_height="@dimen/_40dp"
        android:layout_below="@id/biodata1"
        android:background="@android:color/white"
        android:text="@string/isi_about"
        android:textSize="@dimen/_10dp" />

    <Button
        android:id="@+id/prestasi"
        android:layout_width="@dimen/_150dp"
        android:layout_height="@dimen/_30dp"
        android:layout_below="@+id/tv_biodate"
        android:layout_marginStart="260dp"
        android:layout_marginTop="@dimen/_30dp"
        android:background="@android:color/black"
        android:text="achievement"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/isi_prestasi"
        android:layout_width="@dimen/_150dp"
        android:layout_height="@dimen/_40dp"
        android:layout_below="@id/biodata1"
        android:layout_marginStart="@dimen/_260dp"
        android:background="@android:color/white"
        android:text="@string/_prestasi"
        android:textSize="@dimen/_10dp" />
    <Button
        android:id="@+id/contak"
        android:layout_width="@dimen/_150dp"
        android:layout_height="@dimen/_30dp"
        android:layout_below="@+id/isi_aboutme"
        android:layout_marginTop="@dimen/_30dp"
        android:layout_marginStart="@dimen/_140dp"
        android:background="@android:color/black"
        android:text="@string/contact_details"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/isi_contak"
        android:layout_width="@dimen/_150dp"
        android:layout_height="@dimen/_90dp"
        android:layout_below="@id/contak"
        android:background="@android:color/white"
        android:text="@string/_isikontak"
        android:layout_marginStart="140dp"
        android:textSize="@dimen/_10dp" />
    <Button
        android:id="@+id/riwayat"
        android:layout_width="@dimen/_150dp"
        android:layout_height="@dimen/_30dp"
        android:layout_below="@+id/isi_contak"
        android:layout_marginTop="@dimen/_30dp"
        android:background="@android:color/black"
        android:textSize="@dimen/_10dp"
        android:text="@string/educational_background"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/isiriwayat"
        android:layout_width="@dimen/_150dp"
        android:layout_height="@dimen/_80dp"
        android:layout_below="@id/riwayat"
        android:background="@android:color/white"
        android:text="@string/isi_pendidikan"
        android:textSize="@dimen/_10dp" />

    <Button
        android:id="@+id/organisasi"
        android:layout_width="@dimen/_150dp"
        android:layout_height="@dimen/_30dp"
        android:layout_below="@+id/isi_contak"
        android:layout_marginStart="260dp"
        android:layout_marginTop="@dimen/_30dp"
        android:background="@android:color/black"
        android:text="organization"
        android:textColor="@android:color/white" />
    <Button
        android:id="@+id/isi_organisasi"
        android:layout_width="@dimen/_150dp"
        android:layout_height="@dimen/_80dp"
        android:layout_below="@id/organisasi"
        android:layout_marginStart="@dimen/_260dp"
        android:background="@android:color/white"
        android:text="@string/isi_organisasi"
        android:textSize="@dimen/_10dp" />
    <Button
        android:layout_width="@dimen/_300dp"
        android:layout_height="@dimen/_60dp"
        android:background="@drawable/ummibutton"
        android:layout_below="@id/isi_organisasi"
        android:layout_marginTop="@dimen/_15dp"
        android:layout_marginStart="@dimen/_55dp"
        android:id="@+id/tvbawah"
        android:text="@string/_isimotto"/>

</RelativeLayout>